--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -102,6 +102,7 @@
                 </p>
             </div>
         </div>
+        <a href="https://icp.gov.moe" target="_blank">萌ICP备 </a><a href="https://icp.gov.moe/?keyword=20202004" target="_blank"> 20202004号</a>
     </div>
 </footer>
 
