--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -92,7 +92,7 @@
                 </ul>
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}  <a href="https://icp.gov.moe" target="_blank">萌ICP备 </a><a href="https://icp.gov.moe/?keyword=20202004" target="_blank"> 20202004号</a>
-
+                        <a href="http://beian.miit.gov.cn/">陕ICP备20002453号</a>
                     <br>
                     Theme on <a href="{{ site.github_repo }}">GitHub</a> |
                     <iframe
